--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                     <li>
                         <div class="functions">
                             <h2 class="setting-h2">関数類</h2>
-                            <button onclick="clickNum(Math.PI)" class="blueButton">&pi;</button>
-                            <button onclick="powNum()" class="greenButton">x&sup2;</button>
-                            <button onclick="sqrtNum()" class="greenButton noRoboto">&Sqrt;</button>
+                            <button onclick="clickNum(Math.PI)" class="outline-button">&pi;</button>
+                            <button onclick="powNum()" class="contained-button">x&sup2;</button>
+                            <button onclick="sqrtNum()" class="contained-button noRoboto">&Sqrt;</button>
                         </div>
                         <div class="history">
                             <h2 class="setting-h2">履歴</h2>
@@ -112,40 +112,40 @@
                 </span>
             </div>
             <div id="buttons">
-                <button onclick="changeCode()" class="greenButton">+/&minus;</button>
-                <button onclick="backspace()" class="pinkButton downLittle">
+                <button onclick="changeCode()" class="contained-button">+/&minus;</button>
+                <button onclick="backspace()" class="green-button contained-button">
                     <img src="./images/backscape.svg" class="downLittle" alt="削除">
                 </button>
-                <button onclick="clearText(0)" class="pinkButton">C</button>
-                <button onclick="clearText(1)" class="pinkButton">AC</button><br>
-                <button onclick="divHundred()" class="greenButton upButton">%</button>
-                <button onclick="addFraction(true)" class="orangeButton" id="fraction0">
+                <button onclick="clearText(0)" class="green-button contained-button">C</button>
+                <button onclick="clearText(1)" class="green-button contained-button">AC</button><br>
+                <button onclick="divHundred()" class="contained-button upButton">%</button>
+                <button onclick="addFraction(true)" class="contained-button" id="fraction0">
                     <span class="topLittle">a</span><span class="fraction"><span class="numerator">b</span><br>
                         <span>c</span>
                     </span>
                 </button>
-                <button onclick="addFraction(false)" class="orangeButton" id="fraction1"><span class="fraction"><span
+                <button onclick="addFraction(false)" class="contained-button" id="fraction1"><span class="fraction"><span
                             class="numerator">a</span><br>
                         <span>b</span>
                     </span>
                 </button>
-                <button onclick="calcMode('%')" class="orangeButton upButton smallFont">あまり</button><br>
-                <button onclick="clickNum(7)" class="blueButton upButton">7</button>
-                <button onclick="clickNum(8)" class="blueButton upButton">8</button>
-                <button onclick="clickNum(9)" class="blueButton upButton">9</button>
-                <button onclick="calcMode('+')" class="greenButton upButton">&plus;</button><br>
-                <button onclick="clickNum(3)" class="blueButton upButton">3</button>
-                <button onclick="clickNum(5)" class="blueButton upButton">5</button>
-                <button onclick="clickNum(6)" class="blueButton upButton">6</button>
-                <button onclick="calcMode('-')" class="greenButton upButton">&minus;</button><br>
-                <button onclick="clickNum(1)" class="blueButton upButton">1</button>
-                <button onclick="clickNum(2)" class="blueButton upButton">2</button>
-                <button onclick="clickNum(3)" class="blueButton upButton">3</button>
-                <button onclick="calcMode('*')" class="greenButton upButton">&times;</button><br>
-                <button onclick="clickNum(0)" class="blueButton upButton">0</button>
-                <button onclick="clickNum('.')" class="blueButton upButton">.</button>
-                <button onclick="showAnswer()" class="pinkButton upButton">=</button>
-                <button onclick="calcMode('/')" class="greenButton upButton">&divide;</button><br>
+                <button onclick="calcMode('%')" class="contained-button smallFont">あまり</button><br>
+                <button onclick="clickNum(7)" class="outline-button">7</button>
+                <button onclick="clickNum(8)" class="outline-button">8</button>
+                <button onclick="clickNum(9)" class="outline-button">9</button>
+                <button onclick="calcMode('+')" class="contained-button">&plus;</button><br>
+                <button onclick="clickNum(3)" class="outline-button">4</button>
+                <button onclick="clickNum(5)" class="outline-button">5</button>
+                <button onclick="clickNum(6)" class="outline-button">6</button>
+                <button onclick="calcMode('-')" class="contained-button">&minus;</button><br>
+                <button onclick="clickNum(1)" class="outline-button">1</button>
+                <button onclick="clickNum(2)" class="outline-button">2</button>
+                <button onclick="clickNum(3)" class="outline-button">3</button>
+                <button onclick="calcMode('*')" class="contained-button">&times;</button><br>
+                <button onclick="clickNum(0)" class="outline-button">0</button>
+                <button onclick="clickNum('.')" class="outline-button">.</button>
+                <button onclick="showAnswer()" class="green-button contained-button">=</button>
+                <button onclick="calcMode('/')" class="contained-button">&divide;</button><br>
             </div>
         </div>
     </main>
